--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -1,19 +1,12 @@
 name: Release Helm Charts
 
-# Do not change this
-concurrency: release-helm
-
 on:
   push:
     branches:
       - 'main'
       - 'releases/**'
-      - 'feature/**'
     paths:
       - 'charts/**'
-
-env:
-  GH_RAW_LOCATION: raw.githubusercontent.com/tibco/tp-helm-charts/gh-pages/
 
 jobs:
   release:
@@ -39,13 +32,20 @@ jobs:
           version: '3.17.1'
 
       - name: Add dependency chart repos
+        run: |      
+          helm repo add tibco-platform https://tibcosoftware.github.io/tp-helm-charts/
+
+      - name: Build subchart dependencies
         run: |
-          helm repo add tibco-platform --username "${{ secrets.GITHUB_TOKEN }}" --password "${{ secrets.GITHUB_TOKEN }}" https://${{ env.GH_RAW_LOCATION }}
+          for d in $(find charts/ -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq); do
+            echo "Running 'helm dependency build' in $d"
+            helm dependency build "$d"
+          done
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         with:
           skip_existing: true
-          packages_with_index: true
+          packages_with_index: false
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
