updated github actions

--- a/.github/workflows/release-chart.yaml
+++ b/.github/workflows/release-chart.yaml
@@ -1,10 +1,14 @@
 name: Release Helm Charts
 
+# Do not change this
+concurrency: release-helm
+
 on:
   push:
     branches:
       - 'main'
       - 'releases/**'
+      - 'feature/**'
     paths:
       - 'charts/**'
 
@@ -32,20 +36,12 @@ jobs:
           version: '3.17.1'
 
       - name: Add dependency chart repos
-        run: |      
-          helm repo add tibco-platform https://tibcosoftware.github.io/tp-helm-charts/
-
-      - name: Build subchart dependencies
         run: |
-          for d in $(find charts/ -type f -name 'Chart.yaml' | sed -r 's|/[^/]+$||' | sort | uniq); do
-            echo "Running 'helm dependency build' in $d"
-            helm dependency build "$d"
-          done
-
+          helm repo add tibco-platform https://tibcosoftware.github.io/tp-helm-charts/
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         with:
           skip_existing: true
-          packages_with_index: false
+          packages_with_index: true
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
