--- a/charts/tp-cp-recipes/Chart.yaml
+++ b/charts/tp-cp-recipes/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: tp-cp-recipes
 description: TIBCO Platform recipe chart
 type: application
-version: 1.7.47
-appVersion: "1.7.0"
+version: 1.8.37
+appVersion: "1.8.0"
 keywords:
   - tibco-platform
   - platform
@@ -19,17 +19,24 @@ annotations:
   app.helm.sh/name: tp-cp-recipes
 dependencies:
   - name: tp-cp-infra-recipes
-    version: "1.7.18"
+    version: "1.8.16"
     repository: alias:tibco-platform
   - name: tp-cp-bwce-recipes
-    version: "1.7.8"
+    version: "1.8.9"
     repository: alias:tibco-platform
   - name: tp-cp-flogo-recipes
-    version: "1.7.11"
+    version: "1.8.15"
     repository: alias:tibco-platform
   - name: tp-cp-tibcohub-recipes
-    version: "1.7.16"
+    version: "1.8.6"
     repository: alias:tibco-platform
   - name: dp-oauth2proxy-recipes
-    version: "1.7.6"
+    version: "1.8.3"
+    repository: alias:tibco-platform
+# tp-cp-hawk-console-recipes - moves to platform-base for 1.7.0
+#  - name: tp-cp-hawk-console-recipes
+#    version: "1.6.9"
+#    repository: alias:tibco-platform
+  - name: tp-cp-discoveryservice-recipes
+    version: "1.8.0"
     repository: alias:tibco-platform
