Publishing CPCore charts for 1.8.0 release

--- a/charts/tp-cp-core/templates/jobs.yaml
+++ b/charts/tp-cp-core/templates/jobs.yaml
@@ -493,6 +493,8 @@ metadata:
     {{- include "tp-control-plane.shared.labels.standard" . | nindent 4 }}
 spec:
   backoffLimit: 0
+  activeDeadlineSeconds: 60 # Timeout and terminate after 60 seconds
+  ttlSecondsAfterFinished: 3600 # Remove the job 1 hour after completion
   template:
     metadata:
       name: {{ include "tp-control-plane.consts.appName" . }}-security-certs
