--- a/charts/tp-cp-core/values.yaml
+++ b/charts/tp-cp-core/values.yaml
@@ -32,15 +32,17 @@ global:
       repo: "tp-helm-charts"
       username: ""
       password: ""
+      pullLatestCharts: false
+      certificateSecretName: ""
     logging:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 4.0.0
+          tag: 4.0.3
     check_dependencies:
       distroless_debian:
         name: "common-distroless-base-debian-debug"
-        tag: 12
+        tag: 12.11
     self_hosted_deployment: true
     is_replica_region: false
     finops: "disable"
