--- a/charts/tp-cp-core/charts/orchestrator/values.yaml
+++ b/charts/tp-cp-core/charts/orchestrator/values.yaml
@@ -39,15 +39,17 @@ global:
       repo: "tp-helm-charts"
       username: ""
       password: ""
+      pullLatestCharts: false
+      certificateSecretName: ""
     logging:
       fluentbit:
         image:
           name: "common-fluentbit"
-          tag: 4.0.0
+          tag: 4.0.3
     check_dependencies:
       distroless_debian:
         name: "common-distroless-base-debian-debug"
-        tag: 12
+        tag: 12.11
       
 
   # Pod Security Context configuration
