--- a/charts/tp-cp-integration-bw/charts/bw-webserver/Chart.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/Chart.yaml
@@ -2,8 +2,8 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
-## CONTEXT
-
-bw6-webserver:
-  # Switch to false to disable this chart.
-  enabled: true
+apiVersion: v1
+name: bw-webserver
+version: 1.8.0
+appVersion: 1.8.0
+description: TIBCO Platform Control Plane - BWCE, BW6 and BW5 - WebServer
