--- a/charts/bwprovisioner/values.yaml
+++ b/charts/bwprovisioner/values.yaml
@@ -37,7 +37,7 @@ global:
           enabled: true
         enabled: true
         image:
-          tag: 4.0.0
+          tag: 4.0.3
         resources:
           requests:
             cpu: 10m
@@ -217,6 +217,15 @@ config:
   BWCE_APP_HELMCHART_NAME: "dp-bwce-app"
   BWCE_APP_HELMCHART_VERSION: "1.4.2"
   PROVISIONER_AGENT_SERVICE_PORT: "80"
+
+autoDiscovery:
+  enabled: false
+  config:
+    APP_DISCOVERY_LABEL_SELECTOR: ""
+    APP_VERSION_ANNOTATION: "com.tibco.bw/app-version"
+    APP_VERSION_DEFAULT_VALUE: "1.0.0"
+    APP_DISCOVERY_ENGINE_PORT: "8090"
+    APP_ID_PREFIX: "bwce"
 
 publicApi:
   ingress:
