--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bt.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bt.yaml
@@ -109,6 +109,10 @@ spec:
         - name: HTTPS_PROXY
           value: "{{ include "bwce-utilities.cp-https-proxy" $dot }}"
         {{- end }}
+        {{- if (include "bwce-utilities.container-registry.custom-cert-secret" $dot) }}
+        - name: SSL_CERT_DIR
+          value: "/etc/certs/"
+        {{- end }}
         volumeMounts:
         - mountPath: {{ $.Values.volumes.plugins.mountPath }}
           subPath: {{ $.Values.volumes.plugins.subPath }}
@@ -122,6 +126,12 @@ spec:
         - mountPath: /tibco/containerregistry
           name: container-registry-secret
 {{- end }}
+# mount this secret only if private container registry with custom certs is configured for CP.
+{{- if (include "bwce-utilities.container-registry.custom-cert-secret" $dot) }}
+        - mountPath: /etc/certs
+          name: container-registry-custom-cert-secret
+          readOnly: true
+{{- end }}
       {{- end }}
       {{- end }}
       volumes:
@@ -132,6 +142,12 @@ spec:
         name: tmp-vol
       - emptyDir: {}
         name: kaniko-vol
+{{- if (include "bwce-utilities.container-registry.custom-cert-secret" $dot) }}
+      - name: container-registry-custom-cert-secret
+        secret:
+          defaultMode: 420
+          secretName: {{ include "bwce-utilities.container-registry.custom-cert-secret" $dot }}
+{{- end }}
 {{- if (include "bwce-utilities.container-registry.secret" $dot) }}
       - name: container-registry-secret
         secret:
