--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bw-studio.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bw-studio.yaml
@@ -79,6 +79,10 @@ spec:
         - name: HTTPS_PROXY
           value: "{{ include "bwce-utilities.cp-https-proxy" $dot }}"
         {{- end }}
+        {{- if (include "bwce-utilities.container-registry.custom-cert-secret" $dot) }}
+        - name: SSL_CERT_DIR
+          value: "/etc/certs/"
+        {{- end }}
         volumeMounts:
         - mountPath: {{ $.Values.toolsMountPath }}
           name: store-vol
@@ -92,6 +96,12 @@ spec:
         - mountPath: /tibco/containerregistry
           name: container-registry-secret
 {{- end }}
+# mount this secret only if private container registry with custom certs is configured for CP.
+{{- if (include "bwce-utilities.container-registry.custom-cert-secret" $dot) }}
+        - mountPath: /etc/certs
+          name: container-registry-custom-cert-secret
+          readOnly: true
+{{- end }}
       volumes:
       - name: store-vol
         persistentVolumeClaim:
@@ -100,6 +110,12 @@ spec:
         name: tmp-vol
       - emptyDir: {}
         name: kaniko-vol
+{{- if (include "bwce-utilities.container-registry.custom-cert-secret" $dot) }}
+      - name: container-registry-custom-cert-secret
+        secret:
+          defaultMode: 420
+          secretName: {{ include "bwce-utilities.container-registry.custom-cert-secret" $dot }}
+{{- end }}
 {{- if (include "bwce-utilities.container-registry.secret" $dot) }}
       - name: container-registry-secret
         secret:
