--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-bt.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/templates/job-bt.yaml
@@ -1,7 +1,7 @@
 # Copyright © 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
-#
+
 {{ if .Values.buildtypesExtract }}
 {{- $dot := . }}
 apiVersion: batch/v1
@@ -112,6 +112,10 @@ spec:
         - name: HTTPS_PROXY
           value: "{{ include "flogo-utilities.cp-https-proxy" $dot }}"
         {{- end }}
+        {{- if (include "flogo-utilities.container-registry.custom-cert-secret" $dot) }}
+        - name: SSL_CERT_DIR
+          value: "/etc/certs/"
+        {{- end }}
         volumeMounts:
         - name: store-vol
           mountPath: {{ $.Values.volumes.plugins.mountPath }}
@@ -126,6 +130,12 @@ spec:
         - mountPath: /tibco/containerregistry
           name: container-registry-secret
         {{- end }}
+        # mount this secret only if private container registry with custom certs is configured for CP.
+        {{- if (include "flogo-utilities.container-registry.custom-cert-secret" $dot) }}
+        - mountPath: /etc/certs
+          name: container-registry-custom-cert-secret
+          readOnly: true
+        {{- end }}
       {{- end }}
       {{- end }}
       volumes:
@@ -136,6 +146,12 @@ spec:
         name: tmp-vol
       - emptyDir: {}
         name: kaniko-vol
+      {{- if (include "flogo-utilities.container-registry.custom-cert-secret" $dot) }}
+      - name: container-registry-custom-cert-secret
+        secret:
+          defaultMode: 420 # 0644 in octal
+          secretName: {{ include "flogo-utilities.container-registry.custom-cert-secret" $dot }}
+      {{- end }}
       {{- if (include "flogo-utilities.container-registry.secret" $dot) }}
       - name: container-registry-secret
         secret:
