--- a/charts/tp-cp-integration-bw/Chart.yaml
+++ b/charts/tp-cp-integration-bw/Chart.yaml
@@ -3,11 +3,11 @@
 # in the license file that is distributed with this file.
 
 apiVersion: v2
-name: tp-cp-integration-bwce
-version: 1.7.10
-appVersion: 1.7.0
-description: TIBCO Platform Control Plane -- Integration for BWCE
+name: tp-cp-integration-bw
+version: 1.8.13
+appVersion: 1.8.0
+description: TIBCO Platform Control Plane -- Integration for BWCE, BW6 and BW5
 dependencies:
   - name: bw-webserver
-    version: "1.7.*"
+    version: "1.8.*"
     condition: bw-webserver.enabled
