--- a/charts/tp-cp-integration-bw/charts/bw-webserver/templates/service-bw5.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/templates/service-bw5.yaml
@@ -2,19 +2,19 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
-# TP iApp BW5 WebServer Service definition; exposes the service on targetPort 3000
+# TP iApp BW5 WebServer Service definition; exposes the service on targetPort 3001
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "bw5-webserver.consts.appName" . }}
+  name: tp-cp-bw5-webserver
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "bw5-webserver.shared.labels.standard" . | nindent 4 }}
+    {{- include "bw-webserver.shared.labels.standard" . | nindent 4 }}
 spec:
   ports:
-    - name: server
+    - name: bw5
       port: 3001
       protocol: TCP
       targetPort: 3001
   selector:
-    {{- include "bw5-webserver.shared.labels.selector" . | nindent 4 }}
+    {{- include "bw-webserver.shared.labels.selector" . | nindent 4 }}
