--- a/charts/tp-cp-integration-bw/charts/bw-webserver/templates/service-bw6.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/templates/service-bw6.yaml
@@ -2,19 +2,19 @@
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 
-# TP iApp BW WebServer Service definition; exposes the service on targetPort 3000
+# TP iApp BW6 WebServer Service definition; exposes the service on targetPort 3002
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "bw-webserver.consts.appName" . }}
+  name: tp-cp-bw6-webserver
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "bw-webserver.shared.labels.standard" . | nindent 4 }}
 spec:
   ports:
-    - name: server
+    - name: bw6
       port: 3000
       protocol: TCP
-      targetPort: 3000
+      targetPort: 3002
   selector:
     {{- include "bw-webserver.shared.labels.selector" . | nindent 4 }}
