--- a/charts/tp-cp-integration-bw/charts/bw-webserver/templates/tibcoroute-bw6.yaml
+++ b/charts/tp-cp-integration-bw/charts/bw-webserver/templates/tibcoroute-bw6.yaml
@@ -6,12 +6,12 @@
 apiVersion: cloud.tibco.com/v1
 kind: TibcoRoute
 metadata:
-  name: {{ include "bw5-webserver.consts.appName" . }}
+  name: tp-cp-bw6-webserver
   namespace: {{ .Release.Namespace }}
   labels:
-    {{- include "bw5-webserver.shared.labels.standard" . | nindent 4 }}
+    {{- include "bw-webserver.shared.labels.standard" . | nindent 4 }}
 spec:
-  serviceName: {{ include "bw5-webserver.consts.appName" . }}
+  serviceName: tp-cp-bw6-webserver
   env:
     - name: TSC_DNS_DOMAIN
       valueFrom:
@@ -19,9 +19,9 @@ spec:
           name: {{ include "tp-control-plane-dnsdomain-configmap" . }}
           key: TSC_DNS_DOMAIN
   endpoints:
-    - path: /cp/bw5/web-ui-content
-      internalPath: /cp/bw5/web-ui-content
-      port: 3001
+    - path: /cp/bw6/web-ui-content
+      internalPath: /
+      port: 3000
       protocol: http
       proxies:
         - listener: virtual
@@ -36,9 +36,9 @@ spec:
           enableRedirects: true
           allowClientCache: true
           allowXFrameOptions: false
-    - path: /cp/bw5/v1
-      internalPath: /tp-cp-bw5-ws/v1
-      port: 3001
+    - path: /cp/bw6/v1
+      internalPath: /tp-cp-bw6-ws/v1
+      port: 3000
       protocol: http
       proxies:
         - listener: virtual
