--- a/charts/tp-cp-integration/values.yaml
+++ b/charts/tp-cp-integration/values.yaml
@@ -3,13 +3,9 @@
 # in the license file that is distributed with this file.
 
 # Default values for tp-cp-integration.
-tp-cp-integration-bwce:
+tp-cp-integration-bw:
   enabled: true
 tp-cp-integration-flogo:
-  enabled: true
-tp-cp-integration-bw5:
-  enabled: true
-tp-cp-integration-bw6:
   enabled: true
 tp-cp-bwce-utilities:
   enabled: true
