promoting platform-bootstrap

--- a/charts/platform-bootstrap/Chart.yaml
+++ b/charts/platform-bootstrap/Chart.yaml
@@ -8,8 +8,8 @@ apiVersion: v2
 name: platform-bootstrap
 description: TIBCO Platform bootstrap chart
 type: application
-version: 1.7.0
-appVersion: "1.7.0"
+version: 1.8.0-alpha.9
+appVersion: "1.8.0"
 keywords:
   - tibco-platform
   - platform
@@ -19,5 +19,5 @@ annotations:
   app.helm.sh/name: platform-bootstrap
 dependencies:
   - name: tp-cp-bootstrap
-    version: "1.7.18"
+    version: "1.8.10"
     repository: alias:tibco-platform
